# Chronos-Multicore

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  autotools.sh  chronos_analyze  chronos_compile  chronos_simulate  configure.in  problems.txt  readme.txt
benchmarks/: PapaBench-0.3.tgz  README  bench-source.tgz  debie_exe  fft_org2.c.bin.cons  fft_org2.c.bin.dis  tcfg.map
benchmarks/FFT/: FFT.cons  FFT.out
benchmarks/PapaBench-0.3/: PapaBench_for_wcet.txt
benchmarks/adpcm/: adpcm  adpcm.arg  adpcm.c  adpcm.cfg  adpcm.cons  adpcm.dis  adpcm.ilp  adpcm.lb  adpcm.lp  adpcm.lpbound  adpcm.md  adpcm.mdis  adpcm.out  adpcm.sym  loop.info
benchmarks/adpcm_1/: adpcm_1.ilp  adpcm_1.lpbound  adpcm_1.out
benchmarks/bs/: bs  bs.cfg  bs.lp  loop.info
benchmarks/bsort100/: bsort100.ilp  bsort100.lp  bsort100.out
benchmarks/cache_mat/: cache_mat  cache_mat.dis  cache_mat.lpbound  loop.info
benchmarks/ce_matmult/: ce_matmult.cfg  ce_matmult.dis  ce_matmult.out  maxmult_ce5.c.bin.lp
benchmarks/cnt/: cnt.lp
benchmarks/compress/: compress  compress.c  compress.cfg  compress.dis  loop.info
benchmarks/cover/: cover.cons  cover.ir  cover.out  loop.info
benchmarks/crc/: crc.dis
benchmarks/duff/: duff.ir
benchmarks/edn/: edn  edn.c  edn.cg  edn.dis  edn.ilp  edn.lb  edn.md  edn.mdis  edn.sym  loop.info
benchmarks/expint/: expint  expint.lp  loop.info
benchmarks/fdct/: fdct.lp
benchmarks/fft/: a.out  fft  fft.out  fft_org.c.bin.dis  fft_org.c.bin.lp  log.org
benchmarks/fft1/: a.out  fft1.dis  fft1.out  loop.info
benchmarks/fft_org/: fft_org.dis  fft_org.ilp  fft_org.lp  fft_org.out  fft_org2  fft_org2.blks  fft_org2.c  fft_org2.c.bin.cons  fft_org2.md  fft_org2.mdis  loop.info
benchmarks/fibcall/: fibcall.cons  fibcall.out  loop.info
benchmarks/fir/: fir.arg  fir.ilp  fir.lb  fir.lp  fir.mdis  fir.sym
benchmarks/insertsort/: insertsort.lp
benchmarks/jfdcint/: jfdcint  jfdcint.arg  jfdcint.cfg  jfdcint.mdis  jfdcint.out
benchmarks/jfdctint_1/: jfdctint.c  jfdctint_1  jfdctint_1.dis  jfdctint_1.out  loop.info
benchmarks/lms/: lms
benchmarks/ludcmp/: ludcmp  ludcmp.cfg  ludcmp.dis  ludcmp.out
benchmarks/matmult/: loop.info  matmult.bbvar  matmult.lp  matmult.out
benchmarks/matmult_interproc/: matmult_interproc.blks  matmult_interproc.c  matmult_interproc.md  matmult_interproc.mdis
benchmarks/minver/: loop.info  minver.dis  minver.ilp  minver.lp  minver.lpbound
cfg/: .cfg.c.swp  .run.swp  DEADJOE  Makefile  Makefile.am  README  README_vy  cfg.c  cfg.h  common.c  common.h  cscope.files  cscope.in.out  cscope.out  cscope.po.out  delete  ecoff.h  globals.h  main  main.c  misc.c  misc.h  mod  prog.c  prog.h  readfile.c  readfile.h  run  run.sh  ss.c  ss.def  ss.h  tags
debugmacros/: Makefile.am  analysisDAG_ET_alignment.conf  analysisDAG_ET_alignment.conf.bak  debugmacros.cc  debugmacros.conf.bak  debugmacros.h
m_cache/: DAG_WCET.c  DAG_WCET.h  Makefile  Makefile.am  TDMA_bus_sched_4.db  TDMA_bus_sched_4_2.db  a.out  analysis.c  analysis.h  analysisCache.c  analysisCache.h  analysisCacheL2.c  analysisCacheL2.h  analysisCache_L1.c  analysisCache_L1.h  analysisCache_L2.c  analysisCache_L2.h  analysisCache_common.c  analysisCache_common.h  analysisDAG.c  analysisDAG_BCET.c  analysisDAG_BCET.h  analysisDAG_BCET_structural.c  analysisDAG_BCET_structural.h  analysisDAG_BCET_unroll.c  analysisDAG_BCET_unroll.h  analysisDAG_ET_alignment.c  analysisDAG_ET_alignment.h  analysisDAG_WCET.c  analysisDAG_WCET.h  analysisDAG_WCET_alignment.c  analysisDAG_WCET_alignment.h  analysisDAG_WCET_structural.c  analysisDAG_WCET_structural.h  analysisDAG_WCET_unroll.c  analysisDAG_WCET_unroll.h  analysisDAG_common.c  analysisDAG_common.h  analysisEnum.c  analysisEnum.h  (+62 more)
m_cache/CPLEX/: LICENSE  README
m_cache/cache_config/: l2.config
m_cache/compress/: compress  compress.bbvar  compress.blks  compress.c  compress.cfg  compress.cg  compress.dis  compress.ex  compress.lb  compress.loops  compress.md  compress.mdis  compress.sym
m_cache/interfere/: 1.WCRT  1_msc1  1_msc2  2-l1-l2-hitmiss.res  2-l1-l2-wcrt.res  examplePaths  msc1  msc10  msc11  msc1_hitmiss_statistic_1  msc1_hitmiss_statistic_2  msc1_hitmiss_statistic_private  msc1_hitmiss_statistic_wei  msc1_wcetbcet_2  msc2  msc2_hitmiss_statistic_1  msc2_hitmiss_statistic_2  msc2_hitmiss_statistic_private  msc2_hitmiss_statistic_wei  msc2_wcetbcet_1  msc2_wcetbcet_2  msc3  msc4  msc5  msc6  msc7  msc8  simple_test.cf  simple_test.intp  simple_test.msg  simple_test.msg.eb  simple_test.pd
m_cache/matmult/: matmult  matmult.cfg  matmult.dis  matmult.ilp  matmult.mdis
m_cache/statemate/: statemate.sym
m_cache/tools/: cplex  solve
m_cache/wcrt/: Makefile  Makefile.am  alloc.c  alloc.h  analysis.c  clean  cluster.c  cluster.h  cscope.files  cscope.in.out  cscope.out  cscope.po.out  cycle_time.c  cycle_time.h  dp.c  dp.h  dump.c  dump.h  graphcoloring.c  graphcoloring.h  handler.c  handler.h  header.h  knapsack.c  knapsack.h  main.c  make  parse.c  parse.h  selectcontent.c  selectcontent.h  slacks.c  slacks.h  tags  timing  timing.c  timing.h  timingMSG.c  timingMSG.h  topo.c  (+6 more)
scripts/: .arg  .sym  Makefile.am  buildcfg  chronos_analyze.in  chronos_compile.in  chronos_simulate.in  compile  compile_big  extractmdis  getarg  loop.info
simplesim-3.0/: Makefile  TDMA_bus_sched.db  a.out  cache.c  cache.h  cache_access.db  cscope.files  cscope.in.out  cscope.out  cscope.po.out  debie.dis  delete  main.c  multisim.c  sharedbus.c  sharedbus.h  sim  sim-bpred  sim-cache  sim-eio  sim-fast  sim-outorder  sim-outorder.c  sim-profile  sim-safe  simulate  sysprobe  test.cpp
ss_smt/: .main.c.swp  ANNOUNCE  CONTRIBUTORS  COPYING  Makefile  PROGRAM  README  bpred.c  bpred.h  cache.c  cache.h  dlite.c  dlite.h  dois.c  eio.c  eio.h  endian.c  endian.h  eval.c  eval.h  exolex.c  exolex.l  host.h  libexo.c  libexo.h  loader.c  loader.h  machine.c  machine.def  machine.h  main.c  memory.c  memory.h  misc.c  misc.h  options.c  options.h  ptrace.c  ptrace.h  range.c  (+16 more)
test/: fork  fork.c  test1  test2
(+378 files in other folders)
