noinst_PROGRAMS=main

# Only program to build in this folder
main_SOURCES=common.c common.h     \
             cfg.c cfg.h           \
             ecoff.h               \
             globals.h             \
             main.c                \
             misc.c misc.h         \
             prog.c prog.h         \
             readfile.c readfile.h \
             ss.c ss.h ss.def
