noinst_LIBRARIES=libwcrt.a

# Settings
AM_CPPFLAGS=-D_GNU_SOURCE -I@chronos_path@ -D_DEBUG

# Only program to build here
libwcrt_a_SOURCES=alloc.c alloc.h \
                  cluster.c cluster.h \
                  cycle_time.c cycle_time.h \
                  dump.c dump.h \
                  graphcoloring.c graphcoloring.h \
                  handler.c handler.h \
                  header.h \
                  knapsack.c knapsack.h \
                  parse.c parse.h \
                  selectcontent.c selectcontent.h \
                  slacks.c slacks.h \
                  timing.c timing.h \
                  timingMSG.c timingMSG.h \
                  topo.c topo.h \
                  util.c util.h \
                  wcrt.c wcrt.h
